fix encoding escape quotes

--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
@@ -151,6 +151,14 @@
                             </select>
                         </div>
 
+                        <div>
+                            <br />
+                            <div>
+                                <label for="chkEnableChromecastAc3">${LabelEnableChromecastAc3Passthrough}</label>
+                                <input type="checkbox" id="chkEnableChromecastAc3" />
+                            </div>
+                        </div>
+
                         <br />
                         <div>
                             <fieldset data-role="controlgroup">
