--- a/MediaBrowser.WebDashboard/dashboard-ui/userpassword.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/userpassword.html
@@ -4,7 +4,7 @@
     <title></title>
 </head>
 <body>
-    <div id="userPasswordPage" data-role="page" class="page type-interior userProfilesPage userPasswordPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Users" data-require="scripts/myprofile">
+    <div id="userPasswordPage" data-role="page" class="page type-interior userProfilesPage userPasswordPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Users" data-require="scripts/myprofile,scripts/userpassword">
 
         <div data-role="content">
             <div class="content-primary">
@@ -86,11 +86,6 @@
                             </div>
                         </div>
                     </form>
-
-                    <script type="text/javascript">
-                        $('.adminUpdatePasswordForm').off('submit', UpdatePasswordPage.onSubmit).on('submit', UpdatePasswordPage.onSubmit);
-                        $('.adminLocalAccessForm').off('submit', UpdatePasswordPage.onLocalAccessSubmit).on('submit', UpdatePasswordPage.onLocalAccessSubmit);
-                    </script>
                 </div>
             </div>
         </div>
