--- a/MediaBrowser.WebDashboard/dashboard-ui/userlibraryaccess.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/userlibraryaccess.html
@@ -4,7 +4,7 @@
     <title></title>
 </head>
 <body>
-    <div id="userLibraryAccessPage" data-role="page" class="page type-interior userProfilesPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Users">
+    <div id="userLibraryAccessPage" data-role="page" class="page type-interior userProfilesPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Users" data-require="scripts/userlibraryaccess">
 
         <div data-role="content">
             <div class="content-primary">
@@ -71,9 +71,6 @@
                 </form>
             </div>
         </div>
-        <script type="text/javascript">
-            $('.userLibraryAccessForm').off('submit', LibraryAccessPage.onSubmit).on('submit', LibraryAccessPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
