--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardstart.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardstart.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="wizardStartPage" data-role="page" class="page standalonePage wizardPage">
+    <div id="wizardStartPage" data-role="page" class="page standalonePage wizardPage" data-require="scripts/wizardstartpage">
 
         <div data-role="content">
 
@@ -35,10 +35,6 @@
             </div>
 
         </div>
-
-        <script type="text/javascript">
-            $('.wizardStartForm').off('submit', WizardStartPage.onSubmit).on('submit', WizardStartPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
