--- a/MediaBrowser.WebDashboard/dashboard-ui/forgotpassword.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/forgotpassword.html
@@ -4,7 +4,7 @@
     <title>${TitleForgotPassword}</title>
 </head>
 <body>
-    <div data-role="page" class="page standalonePage forgotPasswordPage" data-theme="b">
+    <div data-role="page" class="page standalonePage forgotPasswordPage" data-theme="b" data-require="scripts/forgotpassword">
 
         <div data-role="content">
 
@@ -36,10 +36,6 @@
             </form>
 
         </div>
-
-        <script type="text/javascript">
-            $('.forgotPasswordForm').off('submit', ForgotPasswordPage.onSubmit).on('submit', ForgotPasswordPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
