--- a/MediaBrowser.WebDashboard/dashboard-ui/forgotpasswordpin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/forgotpasswordpin.html
@@ -4,7 +4,7 @@
     <title>${TitlePasswordReset}</title>
 </head>
 <body>
-    <div data-role="page" class="page standalonePage forgotPasswordPage" data-theme="b">
+    <div data-role="page" class="page standalonePage forgotPasswordPinPage" data-theme="b" data-require="scripts/forgotpasswordpin">
 
         <div data-role="content">
 
@@ -33,10 +33,6 @@
             </form>
 
         </div>
-
-        <script type="text/javascript">
-            $('.forgotPasswordPinForm').off('submit', ForgotPasswordPinPage.onSubmit).on('submit', ForgotPasswordPinPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
