--- a/MediaBrowser.WebDashboard/dashboard-ui/notificationsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/notificationsettings.html
@@ -4,7 +4,7 @@
     <title>${TitleNotifications}</title>
 </head>
 <body>
-    <div id="notificationSettingsPage" data-role="page" class="page type-interior notificationConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Notifications">
+    <div id="notificationSettingsPage" data-role="page" class="page type-interior notificationConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Notifications" data-require="scripts/notificationsettings">
 
         <div data-role="content">
             <div class="content-primary">
