--- a/MediaBrowser.WebDashboard/dashboard-ui/playlists.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/playlists.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="playlistsPage" data-role="page" class="page libraryPage">
+    <div id="playlistsPage" data-role="page" class="page libraryPage" data-require="scripts/playlists">
 
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="#" class="ui-btn-active">${TabPlaylists}</a>
