--- a/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
@@ -4,7 +4,7 @@
     <title>${TitlePlayback}</title>
 </head>
 <body>
-    <div id="cinemaModeConfigurationPage" data-role="page" class="page type-interior playbackConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Cinema-Mode">
+    <div id="cinemaModeConfigurationPage" data-role="page" class="page type-interior playbackConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Cinema-Mode" data-require="scripts/cinemamodeconfiguration">
 
         <div data-role="content">
             <div class="content-primary">
@@ -86,10 +86,6 @@
                 </form>
             </div>
         </div>
-
-        <script type="text/javascript">
-            $('.cinemaModeConfigurationForm').off('submit', CinemaModeConfigurationPage.onSubmit).on('submit', CinemaModeConfigurationPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
