--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvseriestimer.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvseriestimer.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="liveTvSeriesTimerPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvcomponents">
+    <div id="liveTvSeriesTimerPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvcomponents,scripts/livetvseriestimer">
         <div class="libraryViewNav">
             <a href="livetvsuggested.html">${TabSuggestions}</a>
             <a href="livetvguide.html">${TabGuide}</a>
@@ -113,9 +113,6 @@
                 <div class="scheduleTab tab"></div>
             </form>
         </div>
-        <script type="text/javascript">
-            $('.liveTvSeriesTimerForm').off('submit', LiveTvSeriesTimerPage.onSubmit).on('submit', LiveTvSeriesTimerPage.onSubmit);
-        </script>
 
     </div>
 </body>
