--- a/MediaBrowser.WebDashboard/dashboard-ui/metadataimages.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/metadataimages.html
@@ -4,7 +4,7 @@
     <title>${TitleMetadata}</title>
 </head>
 <body>
-    <div id="metadataImagesConfigurationPage" data-role="page" class="page type-interior metadataConfigurationPage">
+    <div id="metadataImagesConfigurationPage" data-role="page" class="page type-interior metadataConfigurationPage" data-require="scripts/metadataimagespage">
 
         <div data-role="content">
 
@@ -132,10 +132,6 @@
             </div>
 
         </div>
-
-        <script type="text/javascript">
-            $('.metadataImagesConfigurationForm').off('submit', MetadataImagesPage.onSubmit).on('submit', MetadataImagesPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
