--- a/MediaBrowser.WebDashboard/dashboard-ui/metadatasubtitles.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/metadatasubtitles.html
@@ -4,7 +4,7 @@
     <title>${TitleMetadata}</title>
 </head>
 <body>
-    <div id="metadataSubtitlesPage" data-role="page" class="page type-interior metadataConfigurationPage">
+    <div id="metadataSubtitlesPage" data-role="page" class="page type-interior metadataConfigurationPage" data-require="scripts/metadatasubtitles">
 
         <div data-role="content">
 
@@ -70,10 +70,6 @@
             </div>
 
         </div>
-
-        <script type="text/javascript">
-            $('.metadataSubtitlesForm').off('submit', MetadataSubtitlesPage.onSubmit).on('submit', MetadataSubtitlesPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
