--- a/MediaBrowser.WebDashboard/dashboard-ui/playlistedit.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/playlistedit.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="playlistEditorPage" data-role="page" class="page libraryPage">
+    <div id="playlistEditorPage" data-role="page" class="page libraryPage" data-require="scripts/playlistedit">
 
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="playlists.html" class="ui-btn-active">${TabPlaylists}</a>
