--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
@@ -155,7 +155,7 @@
                             <br />
                             <div>
                                 <label for="chkEnableChromecastAc3">${LabelEnableChromecastAc3Passthrough}</label>
-                                <input type="checkbox" id="chkEnableChromecastAc3" />
+                                <input type="checkbox" id="chkEnableChromecastAc3" data-mini="true" />
                             </div>
                         </div>
 
