--- a/MediaBrowser.WebDashboard/dashboard-ui/mysync.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mysync.html
@@ -4,7 +4,7 @@
     <title>${TitleSync}</title>
 </head>
 <body>
-    <div id="mySyncActivityPage" data-role="page" class="page libraryPage syncActivityPage mySyncPage" data-contextname="${TitleSync}">
+    <div id="mySyncActivityPage" data-role="page" class="page libraryPage syncActivityPage mySyncPage" data-contextname="${TitleSync}" data-require="scripts/syncactivity,scripts/taskbutton">
 
         <div class="libraryViewNav">
             <a href="#" class="ui-btn-active">${TabSyncJobs}</a>
@@ -13,7 +13,7 @@
         <div data-role="content">
 
             <div class="ehsContent">
-                <br/>
+                <br />
                 <div class="syncActivity">
 
                 </div>
