--- a/MediaBrowser.WebDashboard/dashboard-ui/mysyncjob.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mysyncjob.html
@@ -4,7 +4,7 @@
     <title>${TitleSync}</title>
 </head>
 <body>
-    <div id="mySyncJobPage" data-role="page" class="page libraryPage syncJobPage mySyncPage" data-contextname="${TitleSync}">
+    <div id="mySyncJobPage" data-role="page" class="page libraryPage syncJobPage mySyncPage" data-contextname="${TitleSync}" data-require="scripts/syncjob">
 
         <div class="libraryViewNav">
             <a href="mysync.html" class="ui-btn-active">${TabSyncJobs}</a>
@@ -20,9 +20,6 @@
                 <div class="jobItems"></div>
             </div>
         </div>
-        <script type="text/javascript">
-            $('.syncJobForm').off('submit', SyncJobPage.onSubmit).on('submit', SyncJobPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
