--- a/MediaBrowser.WebDashboard/dashboard-ui/syncactivity.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/syncactivity.html
@@ -4,7 +4,7 @@
     <title>${TitleSync}</title>
 </head>
 <body>
-    <div id="syncActivityPage" data-role="page" class="page type-interior syncConfigurationPage syncActivityPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Sync">
+    <div id="syncActivityPage" data-role="page" class="page type-interior syncConfigurationPage syncActivityPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Sync" data-require="scripts/syncactivity,scripts/taskbutton">
 
         <div data-role="content">
             <div class="content-primary">
