--- a/MediaBrowser.WebDashboard/dashboard-ui/syncjob.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/syncjob.html
@@ -4,7 +4,7 @@
     <title>${TitleSync}</title>
 </head>
 <body>
-    <div id="syncJobPage" data-role="page" class="page type-interior syncConfigurationPage syncJobPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Sync">
+    <div id="syncJobPage" data-role="page" class="page type-interior syncConfigurationPage syncJobPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Sync" data-require="scripts/syncjob">
 
         <div data-role="content">
             <div class="content-primary">
@@ -23,9 +23,6 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript">
-            $('.syncJobForm').off('submit', SyncJobPage.onSubmit).on('submit', SyncJobPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
