--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
@@ -200,7 +200,7 @@
                             </select>
                             <div>${LabelEnableItemPreviewsHelp}</div>
                         </div>
-                        
+
                         <div class="fldFullscreen">
                             <br />
                             <div>
@@ -208,6 +208,17 @@
                                     <label for="chkEnableFullScreen">${LabelEnableFullScreen}</label>
                                     <input type="checkbox" id="chkEnableFullScreen" />
                                 </div>
+                            </div>
+                        </div>
+
+                        <div class="fldSyncPath">
+                            <br />
+                            <div>
+                                <label for="txtSyncPath">${LabelSyncPath}</label>
+                                <div style="display: inline-block; width: 92%;">
+                                    <input type="text" id="txtSyncPath" readonly />
+                                </div>
+                                <button class="btnSelectSyncPath" type="button" data-icon="search" data-iconpos="notext" data-inline="true"></button>
                             </div>
                         </div>
                     </div>
