--- a/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
@@ -4,7 +4,7 @@
     <title>${TitleServer}</title>
 </head>
 <body>
-    <div id="dashboardPage" data-role="page" class="page type-interior dashboardHomePage">
+    <div id="dashboardPage" data-role="page" class="page type-interior dashboardHomePage" data-require="scripts/dashboardpage">
 
         <div data-role="content">
             <div class="content-primary">
