--- a/MediaBrowser.WebDashboard/dashboard-ui/plugins.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/plugins.html
@@ -4,7 +4,7 @@
     <title>${TitlePlugins}</title>
 </head>
 <body>
-    <div id="pluginsPage" data-role="page" class="page type-interior pluginConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Plugins">
+    <div id="pluginsPage" data-role="page" class="page type-interior pluginConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Plugins" data-require="scripts/pluginspage">
 
         <div data-role="content">
             <div class="content-primary">
