--- a/MediaBrowser.WebDashboard/dashboard-ui/appservices.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/appservices.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="appServicesPage" data-role="page" class="page type-interior appServicesPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Sync">
+    <div id="appServicesPage" data-role="page" class="page type-interior appServicesPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Sync" data-require="scripts/appservices">
 
         <div data-role="content">
             <div class="content-primary">
