--- a/MediaBrowser.WebDashboard/dashboard-ui/useredit.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/useredit.html
@@ -4,7 +4,7 @@
     <title></title>
 </head>
 <body>
-    <div id="editUserPage" data-role="page" class="page type-interior userProfilesPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Users">
+    <div id="editUserPage" data-role="page" class="page type-interior userProfilesPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Users" data-require="scripts/useredit">
 
         <div data-role="content">
             <div class="content-primary">
@@ -19,7 +19,7 @@
                     <a class="lnkEditUserPreferences" href="#" target="_blank">${ButtonEditOtherUserPreferences}</a>
                 </p>
                 <br />
-                <form id="editUserProfileForm">
+                <form class="editUserProfileForm">
 
                     <div class="disabledUserBanner" style="display:none;">
                         <div class="btn btnDarkAccent btnStatic">
@@ -130,9 +130,6 @@
                 </form>
             </div>
         </div>
-        <script type="text/javascript">
-            $('#editUserProfileForm').on('submit', EditUserPage.onSubmit);
-        </script>
     </div>
 </body>
 </html>
