--- a/MediaBrowser.WebDashboard/dashboard-ui/homelatest.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/homelatest.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="homeLatestPage" data-role="page" class="page type-home libraryPage allLibraryPage backdropPage" data-backdroptype="movie,series,game,book" data-require="scripts/homelatest">
+    <div id="homeLatestPage" data-role="page" class="page type-home libraryPage allLibraryPage backdropPage" data-backdroptype="movie,series,game,book" data-require="scripts/sections,scripts/homelatest">
 
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="index.html">${TabHome}</a>
